--- a/context filters/mainwindow.ui
+++ b/context filters/mainwindow.ui
@@ -17,8 +17,8 @@
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>97</x>
-      <y>55</y>
+      <x>90</x>
+      <y>50</y>
       <width>561</width>
       <height>401</height>
      </rect>
@@ -68,6 +68,11 @@
   <action name="actionexit">
    <property name="text">
     <string>exit</string>
+   </property>
+  </action>
+  <action name="actionsimple">
+   <property name="text">
+    <string>simple</string>
    </property>
   </action>
  </widget>
