--- a/rotating image/mainwindow.ui
+++ b/rotating image/mainwindow.ui
@@ -27,7 +27,7 @@
      <string/>
     </property>
    </widget>
-   <widget class="QSlider" name="Lslider">
+   <widget class="QSlider" name="skal">
     <property name="geometry">
      <rect>
       <x>30</x>
@@ -37,19 +37,19 @@
      </rect>
     </property>
     <property name="minimum">
-     <number>-100</number>
+     <number>1</number>
     </property>
     <property name="maximum">
-     <number>100</number>
+     <number>20</number>
     </property>
     <property name="value">
-     <number>0</number>
+     <number>1</number>
     </property>
     <property name="orientation">
      <enum>Qt::Orientation::Vertical</enum>
     </property>
    </widget>
-   <widget class="QSlider" name="aslider">
+   <widget class="QSlider" name="rot">
     <property name="geometry">
      <rect>
       <x>80</x>
@@ -59,45 +59,13 @@
      </rect>
     </property>
     <property name="minimum">
-     <number>-128</number>
+     <number>0</number>
     </property>
     <property name="maximum">
-     <number>127</number>
+     <number>360</number>
     </property>
     <property name="orientation">
      <enum>Qt::Orientation::Vertical</enum>
-    </property>
-   </widget>
-   <widget class="QSlider" name="bslider">
-    <property name="geometry">
-     <rect>
-      <x>140</x>
-      <y>100</y>
-      <width>22</width>
-      <height>160</height>
-     </rect>
-    </property>
-    <property name="minimum">
-     <number>-128</number>
-    </property>
-    <property name="maximum">
-     <number>127</number>
-    </property>
-    <property name="orientation">
-     <enum>Qt::Orientation::Vertical</enum>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="pushButton">
-    <property name="geometry">
-     <rect>
-      <x>40</x>
-      <y>350</y>
-      <width>100</width>
-      <height>32</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>PushButton</string>
     </property>
    </widget>
   </widget>
